[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rossmassey/fetch_leetcode_problem"]

[project]
name = "rossmassey.fetch_leetcode_problem"
version = "0.1.4"
authors = [
  { name="Ross Massey", email="massey0ross@gmail.com" },
]
description = "A package for getting information about a leetcode problem"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/rossmassey/fetch-leetcode-problem"
Documentation = "https://rossmassey.github.io/fetch-leetcode-problem/"
Issues = "https://github.com/rossmassey/fetch-leetcode-problem/issues"
